static/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/


@import url('https://fonts.googleapis.com/css2?family=Londrina+Shadow&family=Raleway&display=swap');

/* ----------------------------------------------------------- BASE TEMPLATE */
body {
    margin: 0;
    padding: 0;
    text-align: center;
    font-family: "Raleway", sans-serif;
    background-image: url("../images/cinema-bg.png");
    background-position: center center;
    background-size: cover;
    width: 100%;
    height: 90vh;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.pages-header {
    margin: 10px;
    color: #fafafa;
    text-shadow: 2px -2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 3rem;
    letter-spacing: 5px;
    text-align: right;
}

.pages-header-bg {
    background-image: url("../images/header.png");
    min-height: 10vh;
    background-size: cover;
}

.text-container {
    color: #fafafa;
    background-color: #555555;
    border-radius: 0.5rem;
}

.a-link {
    color: #84BAAD;
    font-weight: bold;
    letter-spacing: 4px;
    padding: 0 4px;
}

.a-link:hover {
    color: #fafafa;
}

/* ------------------------------------------------------------------ NAVBAR */
.navbar {
    border-bottom: 4px dotted #fafafa;
    padding: 0.1rem 1rem;
}

.movie-journal-icon img{
    width: 45px;
    height: 45px;
    margin-left: 20px;
}

/* ------------------------------------------------------------------ FOOTER */
.footer-container {
    position: fixed;
    height: 60px;
    left: 0;
    bottom: 0;
    width: 100%;
    margin-top: 20px;
    border-top: 4px dotted #fafafa;
}

.footer-element {
    text-align: center;
    vertical-align: bottom;
    margin: 10px 0;
    font-size: 14px;
}

.footer-element p {
    margin-top: 5px;
}

.social-media li a i {
    color: #fafafa;
    background-color: #418a7b;
    font-size: 20px;
    width: 30px;
    height: 30px;
    padding: 12px 0;
    border-radius: 20%;
    line-height: 10px;
    text-align: center;
    transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
}

.social-media li a i:hover {
    color: #fafafa;
    background-color: #f6b86f;
}

/* --------------------------------------------------------- GENERAL BUTTONS */
.green-btn {
    background-color: #418a7b;
    color: #fafafa;
    width: 150px;
}

.orange-btn {
    padding: 4px;
    font-size: 70%;
    min-width: 70px;
    background-color: #F6B86F;
    color: #fafafa;
}

.review-btns {
    padding: 2px;
    font-size: 70%;
    min-width: 40px;
    background-color: #84BAAD;
    color: #fafafa;
}

/* ---------------------------------------------------------- SHOW MORE/LESS */
.comment {
    padding-bottom: 0;
    margin: 5px;
    -webkit-transition: all 0.2s;
    -o-transition: all 0.2s;
    transition: all 0.2s;
    margin: 0 auto;
}

a.morelink {
	text-decoration: none;
    outline: none;
    color: #84BAAD;
}

.morecontent span {
	display: none;
}

/* ------------------------------------------------------------------ SEARCH */
.search-result {
    border-radius: 0.5rem;
    padding: 20px;
    margin: 10px 0;
}

.search-result h4 {
    font-size: 36px;
    color: #fafafa;
}

.search-img {
    max-height: 250px;
    width: auto;
    max-width: 100%;
    border-radius: 0.5rem;
}

.suggestion-container {
    border-radius: 0.5rem;
    padding: 20px;
    margin-top: 30px;
    margin-bottom: 100px;
}

.suggestion-form {
    margin: 30px 0;
}

.suggestion-item {
    margin-top: 10px;
}

/* ---------------------------------------------------------- LOGIN/REGISTER */
.form-login {
    margin-top: 30px;
    padding: 20px;
}

/* -------------------------------------------------------- PROFILE PAGE*/
.profile-header {
    margin: 40px;
    height: 30px;
}

.profile-btn {
    padding: 6px;
    min-width: 80px;
    background-color: #418a7b;;
    color: #fafafa;
}

/* --------------------------------------------------------------- HOME PAGE */
.home-header {
    margin-top: 60px;
    margin-bottom: 30px;
    color: #fafafa;
    text-shadow: 4px -4px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 8rem;
    letter-spacing: 10px;
}

.home-header-bg {
    background-image: url("../images/home-bg.png");
    min-height: 90vh;
    background-size: cover;
    margin-top: 60px;
    margin-bottom: 50px;
}

.home-subheader {
    margin: 20px 0;
    color: #fafafa;
    text-shadow: 2px -2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 3.2rem;
    letter-spacing: 5px;
}

.movies-header {
    margin: 50px 0;
    color: #fafafa;
    text-shadow: 2px -2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 4rem;
    letter-spacing: 5px;
    text-align: left;
}

/* -------------------------------------------------------- HOME PAGE: CARDS */
.movies-row {
    padding: 10px;
    border-radius: 0.5rem;
}

.movie-card-display {
    background-image: url("../images/card-bg8.png");
    background-size: cover;
    margin: 5px 0;
    min-height: 100px;
    padding: 0;
    color: #555555;
}

.card-body {
    padding: 1.25rem 0.4rem;
}

.card-img {
    max-height: 180px;
    width: auto;
    max-width: 100%;
    border-radius: 0.5rem;
} 

.card-title {
    margin-top: 10px;
    margin-bottom: 0;
    font-size: small;
}

.card-footer {
    padding-top: 0;
    background-color: transparent;
    border-top: transparent;
}

.plus-btn {
    color: #F6B86F;
    font-size: 1.2rem;
}

/* -------------------------------------------------------------- MOVIE PAGE */
.movie-page {
    padding: 20px;
    margin-bottom: 120px;
}

.movie-page-row {
    border-radius: 0.5rem;
    margin-top: 25px;
    padding: 20px;
}

.movie-info {
    font-weight: bold;
    font-size: 1.2rem;
}

.movie-page-img {
    margin: 10px 0;
    min-width: 200px;
    max-width: 100%;
    max-height: 350px;
    border-radius: 0.5rem;
}

/* ----------------------------------------------------- MOVIE PAGE: REVIEWS */
.reviews-title {
    margin: 30px auto;
    text-align: center;
    max-width: 600px;
    position: relative;
}

.comment-section {
    padding: 20px 0;
}

.comment-text {
    padding-top: 24px;
    margin: 10px 0;
    background-color: #ffffff28;
    border-radius: 0.5rem;
}

.comment-footer {
    color: #84BAAD;
}

/* ------------------------------------------------------------- EDIT REVIEW */
.review-footer {
    margin: 8px 0;
}

.edit-review-heading {
    margin-top: 20px;
}


/* --------------------------------------------------------- ADMIN: ADD/EDIT */

.review-form {
    border-radius: 0.5rem;
    padding: 10px;
    margin-bottom: 120px;
    margin-top: 30px;
}

.form-movie-input {
    padding: 10px 0;
}

.form-row-div {
    margin-top: 20px;
}

/* ---------------------------------------------------- ERROR HANDLING PAGES */
.error-header{
    margin: 30px 5px;
    color: #fafafa;
    text-shadow: 2px -2px #418a7b;
    font-family: "Londrina Shadow", cursive;
    font-weight: bold;
    font-size: 4.5rem;
    letter-spacing: 5px;
    text-align: center;
}

/* ----------------------------------------------------------- MEDIA QUERIES */

/* Media queries for extra small devices */
@media only screen and (max-width: 600px) {
    body {
        font-size: 90%;
    }
    .review-form{
        padding: 10px 0;
    }
    .home-header {
        margin: 60px 0;
        font-size: 4rem;
        letter-spacing: 5px;
        text-align: right;
    }
    .search-result h4 {
        font-size: 18px;
    }
}

/* Media queries for small devices */
@media only screen and (min-width: 600px) {
    .card-body {
        padding: 1.1rem 0.2rem;
    }
    .home-header {
        text-align: right;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
    .home-header {
        text-align: right;
    }
}

